utility/it-tools/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: it-tools
  namespace: utility
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: it-tools
